# University

Bachelor Thesis/Ausarbeitung/: BachelorArbeit.tex
Bachelor Thesis/Ausarbeitung/bib/: BibtexDatabase.bib.bak  BibtexDatabase.bib.bak.bak
Bachelor Thesis/Ausarbeitung/content/: 01-Titel.tex  02-Bestaetigung.tex  03-Aufgabenstellung.tex  04-VorwortAbstract.tex  1-Einleitung.tex  2-Grundlagen.tex  3-Schätzverfahren.tex  4-Signalerzeugung.tex  5-Auswertung.tex  6-Schluss.tex  AbkGloSymb.tex  Z-Anhang.tex
Bachelor Thesis/Ausarbeitung/images/: AWGN.eps  DominantE.eps  HadamardBeispiel.eps  Hadamardspektren.eps  ML_Herleitung.eps  Modspek.eps  MutipathSim.eps  MutipathSim_abs.eps  OneDominant.eps  Sinc.eps  mSeqBeispiel.eps
Bachelor Thesis/Ausarbeitung/preambel/: preambel.tex
Bachelor Thesis/Python/: PhaseEstimation.py  SignalGeneration.py  SubspaceEstimation.py  algos.py  auswertung.py  channelSimulation.py  mseq.py
Computer Vision/assignment_1/: CVHA1.m  harris_detektor.m  rgb_to_gray.m  sobel_xy.m
Computer Vision/assignment_2/: CVHA2.m  punkt_korrespondenzen.m
Computer Vision/assignment_3/: CVHA3.m  F_ransac.asv  F_ransac.m  achtpunktalgorithmus.m
Computer Vision/assignment_4/: CVHA4.m  TR_aus_E.m  rekonstruktion.m
Information Retrieval in High Dimensional Data/assignment_1/: task1.py
Information Retrieval in High Dimensional Data/assignment_2/: task2.py
Information Retrieval in High Dimensional Data/assignment_3/: task3_1_kpca_demo.py  task3_1_kpca_toy_data.py  task3_2.py  task3_2_data.txt
Machine-Learning/Assignment1/Exercise1/: Simulate_robot.m  circle.m  draw_wheel.m  drawrobot.m  params.mat
Machine-Learning/Assignment1/Exercise3/: Exercise3_nubs.m
Machine-Learning/Assignment1/code/: Exercise1.m  Exercise2.m  Exercise3_kmeans.m
Machine-Learning/Assignment2/Code/: EM.m  QLearning.m  SimulateRobot.m  WalkPolicyIteration.m
Machine-Learning/Assignment2/Exercise2/: HMM.m  loglikelihoods.fig
Machine-Learning/Assignment2/Exercise3/: WalkQLearning.m  test_greedy.m
Multisensory Sensory Based Robot Dynamic Manipulation/Tutorials/T1/T1_Template/: Exercise_1.m  Exercise_2.m  R2EulerA.m  RotX.m  RotY.m  invHT.m
Multisensory Sensory Based Robot Dynamic Manipulation/Tutorials/T2/RPPR/: FK_Robot.m  KSimulator_robot.mdl  RPPR_ForwardKinematics.m
Multisensory Sensory Based Robot Dynamic Manipulation/Tutorials/T2/Template4DOF/: RotZ.m  SimpleRobotPlot.m
Multisensory Sensory Based Robot Dynamic Manipulation/Tutorials/T4/src/msd3dof_description/: CMakeLists.txt  package.xml
Multisensory Sensory Based Robot Dynamic Manipulation/Tutorials/T4/src/msd3dof_description/meshes/: Link0.stl  Link1B.stl  Link2B.stl  spring.stl
Multisensory Sensory Based Robot Dynamic Manipulation/Tutorials/T4/src/msd3dof_description/src/: testMeshScaling.cpp
Multisensory Sensory Based Robot Dynamic Manipulation/Tutorials/T4/src/msd3dof_description/urdf/: msd3dof.urdf.xacro
Multisensory Sensory Based Robot Dynamic Manipulation/Tutorials/TRos/T1/Nirnai_Rao_MSRDM_ROStutorial2/src/: CMakeLists.txt  package.xml
Multisensory Sensory Based Robot Dynamic Manipulation/Tutorials/TRos/T1/Nirnai_Rao_MSRDM_ROStutorial2/src/include/turtle_vis/myClass/: TurtleClass.h
Multisensory Sensory Based Robot Dynamic Manipulation/Tutorials/TRos/T1/Nirnai_Rao_MSRDM_ROStutorial2/src/launch/: TurtleVis.launch
Multisensory Sensory Based Robot Dynamic Manipulation/Tutorials/TRos/T1/Nirnai_Rao_MSRDM_ROStutorial2/src/src/solutions/: turtle_control_node.cpp  turtle_set_position.cpp  turtle_vis_node.cpp
Multisensory Sensory Based Robot Dynamic Manipulation/Tutorials/TRos/T1/Nirnai_Rao_MSRDM_ROStutorial2/src/src/solutions/myClass/: TurtleClass.cpp
Multisensory Sensory Based Robot Dynamic Manipulation/Tutorials/TRos/T1/Nirnai_Rao_MSRDM_ROStutorial2/src/srv/: send_desired_pose.srv
Multisensory Sensory Based Robot Dynamic Manipulation/Tutorials/TRos/T2/ROST3_template/urdf_tutorial/rppr_robot_description/: package.xml
Multisensory Sensory Based Robot Dynamic Manipulation/Tutorials/TRos/T2/ROST3_template/urdf_tutorial/rppr_robot_description/urdf/: rppr_robot.urdf
Multisensory Sensory Based Robot Dynamic Manipulation/UR10-project/: .gitignore
Multisensory Sensory Based Robot Dynamic Manipulation/UR10-project/src/imu_project/: CMakeLists.txt  package.xml
Multisensory Sensory Based Robot Dynamic Manipulation/UR10-project/src/imu_project/launch/: imu_project.launch  imu_project_test.launch
Multisensory Sensory Based Robot Dynamic Manipulation/UR10-project/src/imu_project/launch/configs/: imu.rviz
Multisensory Sensory Based Robot Dynamic Manipulation/UR10-project/src/imu_project/msg/: DesiredState.msg
Multisensory Sensory Based Robot Dynamic Manipulation/UR10-project/src/imu_project/src/: calibration.cpp  imu_acc_pub.cpp  kalman.h  kalman_filter.cpp  kalman_pub.cpp  pos_pub.cpp  shake_sensor.cpp  tf_pub.cpp
Multisensory Sensory Based Robot Dynamic Manipulation/UR10-project/src/kinect_object_tracker/: CMakeLists.txt  README.md  package.xml
Multisensory Sensory Based Robot Dynamic Manipulation/UR10-project/src/matlab/: CalcAllUR10final.m  CalcAnalJacob.m  CppRegressor.txt  MyDynEqnUR10Project.txt  MyJacobmatrixUR10ProjectPose.txt  MyJacobmatrixUR10ProjectPosition.txt  MyRegressorUR10refProject.txt  My_TA_UR10Project.txt  My_TA_UR10ccodeProject.txt  MymatrixUR10Project.txt  WriteToFile.m
Multisensory Sensory Based Robot Dynamic Manipulation/UR10-project/src/tum_ics_ur10_controller_tutorial/: CMakeLists.txt  package.xml
Turtlebot Project/Presentation/: Makefile
Turtlebot Project/Presentation/latex/: _Einstellungen.tex  presentation.tex  slides.tex
Turtlebot Project/Presentation/markdown/: presentation.md
Turtlebot Project/Project/: .gitignore
Turtlebot Project/Project/catkin_ws/launch/: game.launch
reemc_zmp_estimator/: CMakeLists.txt  package.xml  reemc_zmp_estimator_plugins.xml
reemc_zmp_estimator/config/: zmp_controller.yaml
reemc_zmp_estimator/launch/: zmp_controller.launch
reemc_zmp_estimator/src/: zmp_controller.cpp
(+170 files in other folders)
