<?xml version="1.0"?>
<package>
  <name>msd3dof_description</name>
  <version>0.1.0</version>
  <description>urdf description of mass spring damper robot 3DOF Tutorial 4.</description>
  <maintainer email="dean@tum.de">Emmanuel Dean</maintainer>
  <license>Technical University of Munich</license>

  <buildtool_depend>catkin</buildtool_depend>

	 <!-- Dependencies needed to compile this package. -->
  <build_depend>urdf</build_depend>
  <build_depend>xacro</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>visualization_msgs</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>tf_conversions</run_depend>
  <run_depend>visualization_msgs</run_depend>

</package>
